# haruspex

./: .gitignore  Cargo.toml
datasource/: Cargo.toml
datasource/proptest-regressions/: data.txt  slice.txt
datasource/src/: error.rs  lib.rs  slice.rs  source.rs
datasource/src/source/: file.rs
