[package]
name = "datasource"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
tokio={version="1", features=["fs"]}
futures = "0.3.17"

[dev-dependencies]
pretty_assertions = "1"
proptest = "1"
rand = "0.8"
